--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 <section class="center-width" style="display: flex;">
 
 	<div style="flex:1;">
-		<h3>Setup is super easy</h3>
+		<h3>No setup required</h3>
 
-		<p>Nearby headsets connect and align automatically, and the game scans your
-		environment as you play.
-		You can start a game with a single button press without any prior setup.</p>
+		<p>Headsets scan the environment while you play,
+			and they all connect automatically with a single button press,
+			so it's super easy to start a game.</p>
 
 		<p class="major"><a href="https://www.meta.com/experiences/lasertag/25121192657495694/" target="_blank">
 		Get the game! ➔</a></p>
