--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 </main>
 
 <footer class="center-width">
-	<p>A game by <a href="htts://trev3d.com" target="_blank">Julian Triveri ➔</a> </p>
+	<p>A game by <a href="https://trev3d.com" target="_blank">Julian Triveri ➔</a> </p>
 	<p>With previous contributions by
 		<a href="https://fizzyapple12.com" target="_blank">Hazel Roeder ➔</a>
 		and Ernesto Tangassi Lucio.</p>
