--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
 	<div style="flex:1;">
 		<h3>No setup required</h3>
 
-		<p>Headsets scan the environment while you play,
-			and they all connect automatically with a single button press,
-			so it's super easy to start a game.</p>
+		<p>Lasertag scans your environment while you play,
+			and players connect automatically with a single button press,
+			so jumping in is super easy.
+			Grab your friends, find a space, and cause chaos.</p>
 
 		<p class="major"><a href="https://www.meta.com/experiences/lasertag/25121192657495694/" target="_blank">
 		Get the game! ➔</a></p>
@@ -51,8 +52,8 @@
 		<p class="minor"><a href="https://discord.com/invite/DgTqG5A6BD" target="_blank">
 		Join our Discord ➔</a></p>
 
-		<p class="minor"><a href="https://github.com/anaglyphs/lasertag" target="_blank">
-		GitHub repo ➔</a></p>
+		<p><a href="https://github.com/anaglyphs/lasertag" target="_blank">
+		Clone from GitHub ➔</a></p>
 	</div>
 
 	<div class="hide-mobile" style="flex:0.4; position:relative;">
