--- a/index.html
+++ b/index.html
@@ -68,13 +68,14 @@
 	onclick="event.srcElement.scrollIntoView({behavior: 'smooth', block: 'nearest', inline: 'center'});">
 		<img src="lasertag/screenshots/armory1.png" />
 		<img src="lasertag/screenshots/sfpark.png" />
-		<img src="lasertag/screenshots/armory2.png" />
 		<img src="lasertag/screenshots/bechtel1.png" />
+		<img src="lasertag/screenshots/waffle3.png" />
+		<img src="lasertag/screenshots/armory2.png" />
 		<img src="lasertag/screenshots/bechtel2.png" />
-		<img src="lasertag/screenshots/bechtel3.png" />
-		<img src="lasertag/screenshots/bechtel4.png" />
-		<img src="lasertag/screenshots/bechtel6.png" />
 		<img src="lasertag/screenshots/fwa3.png" />
+		<!--<img src="lasertag/screenshots/bechtel3.png" />-->
+		<!--<img src="lasertag/screenshots/bechtel4.png" />-->
+		<img src="lasertag/screenshots/bechtel6.png" />
 	</ul>
 </section>
 
