--- a/privacy.html
+++ b/privacy.html
@@ -13,26 +13,31 @@
 <main class="center-width">
 
 <h1>Privacy Policy for Lasertag</h1>
-<h3>tl;dr, we don't collect any information. Meta & Unity do.</h3>
-<br>
-<p>Lasertag does not collect or transmit any personal information (or any information at all)
+<p><b>tl;dr, we collect, but do not save or store, any of your information.
+	We transmit bare-essential information (Meta User ID, IP address, Device ID) only to Meta and Unity
+	services.</b></p>
+<p>Lasertag does not transmit any personal information
 to anyone except for
 <a href="https://www.facebook.com/privacy/policy" target=_"blank">
 Meta</a>,
 <a href="https://unity.com/legal/game-player-and-app-user-privacy-policy" target="_blank">
 Unity</a>,
-and any people you're playing with.
+and any people you're playing with in the same physical space.
 All Meta Quest apps must typically share some information (such as your User/Device ID, IP address, etc.)
-with Meta and Unity.</p>
+with Meta. We use the Unity game engine, which may send telemetry data to Unity according to their
+privacy policy.</p>
 
-<p>The multiplayer networking takes place on your local network
-and doesn't interface with any third party servers
-except for Meta's.</p>
+<p>The multiplayer networking takes place either on your local network
+or through Unity's Relay servers. When opting-in to using Unity's Relay servers,
+the device will and must send some information
+(an anonymous per-session ID & your IP address)
+to Unity.
+</p>
 
 <p>When you join a multiplayer game, your Meta User ID, Device ID, and IP address
 are shared with other players, with Meta for colocation functionality,
-and with Unity for multiplayer connection functionality.
-We do not transmit any data to anybody else.</p>
+and optionally with Unity for multiplayer connection functionality.
+We do not transmit any data to anybody else, including to ourselves or our own servers.</p>
 
 <p>Information about your physical space (point cloud information and more)
 is collected and managed by Meta for colocation functionality.
