--- a/privacy.html
+++ b/privacy.html
@@ -13,25 +13,26 @@
 <main class="center-width">
 
 <h1>Privacy Policy for Lasertag</h1>
-<p><b>tl;dr, we collect, but do not save or store, any of your information.
-	We transmit bare-essential information (Meta User ID, IP address, Device ID) only to Meta and Unity
-	services.</b></p>
-<p>Lasertag does not transmit any personal information
+<p><b>tl;dr, we collect essential information (Meta User ID, IP address, Device ID) on-device.
+	We transmit this information only to Meta and Unity services.
+	We don't transmit or store information to our own servers.</b></p>
+<p>Lasertag does not transmit any information
 to anyone except for
 <a href="https://www.facebook.com/privacy/policy" target=_"blank">
 Meta</a>,
 <a href="https://unity.com/legal/game-player-and-app-user-privacy-policy" target="_blank">
 Unity</a>,
-and any people you're playing with in the same physical space.
-All Meta Quest apps must typically share some information (such as your User/Device ID, IP address, etc.)
+and any people you're playing with in the same physical space.</p>
+
+<p>All Meta Quest apps must typically share some information (such as your User/Device ID, IP address, etc.)
 with Meta. We use the Unity game engine, which may send telemetry data to Unity according to their
 privacy policy.</p>
 
 <p>The multiplayer networking takes place either on your local network
-or through Unity's Relay servers. When opting-in to using Unity's Relay servers,
-the device will and must send some information
-(an anonymous per-session ID & your IP address)
-to Unity.
+or, if you opt-in, through Unity's Relay servers.
+When opting-in to using Unity's Relay servers,
+the software will send some essential information
+(an anonymous per-session ID & your IP address) to Unity.
 </p>
 
 <p>When you join a multiplayer game, your Meta User ID, Device ID, and IP address
@@ -40,8 +41,9 @@ and optionally with Unity for multiplayer connection functionality.
 We do not transmit any data to anybody else, including to ourselves or our own servers.</p>
 
 <p>Information about your physical space (point cloud information and more)
-is collected and managed by Meta for colocation functionality.
-We don't handle or have access to that data.</p>
+is collected, transmited to, stored, and managed by Meta for colocation functionality.
+We don't handle or have access to that data. Meta allows you to delete
+this data from their servers in your headset's system settings.</p>
 
 <h2>Contact</h2>
 <p>You can reach out to triveri@outlook.com if you have any questions</p>
