--- a/index.html
+++ b/index.html
@@ -8,21 +8,22 @@
 	<meta name="viewport" content="width=device-width, height=device-height">
 
 </head>
-<body>
+<body style="margin:0 auto;">
 
 <main>
 
-<section style="position:relative;">
+<section style="position:relative; padding-top:0;">
 
-	<header class="center-width">
+	<!--<header class="center-width">
 		<img class="logo" src="anaglyph.png" style="width:100px;">
 
 		<div style="display:inline-block;">
 			<h1 style="margin:0;">anaglyph</h1>
 		</div>
-	</header>
+	</header>-->
 
-	<div class="webvid" style="max-width:1000px; aspect-ratio:16:9; background-color:black;">
+	<div class="vid" id="mainvid">
+
 		<iframe src="https://player.vimeo.com/video/1071128174?h=dddc621&autoplay=1&loop=1&color=e65f54&byline=0&portrait=0&muted=1"
 		allow="autoplay; fullscreen; picture-in-picture"
 		style = "width:100%;"allowfullscreen></iframe>
@@ -63,7 +64,7 @@
 	</div>
 </section>
 
-<section>
+<section style="padding:0;">
 	<div class="carousel" dir="ltr"
 	onclick="event.srcElement.scrollIntoView({behavior: 'smooth', block: 'nearest', inline: 'center'});">
 		<img src="lasertag/screenshots/armory1.png" />
@@ -171,11 +172,21 @@
 
 </main>
 
-<footer class="center-width">
-	<p>A game by <a href="https://trev3d.com" target="_blank">Julian Triveri ➔</a> </p>
-	<p>With previous contributions by
-		<a href="https://fizzyapple12.com" target="_blank">Hazel Roeder ➔</a>
-		and Ernesto Tangassi Lucio.</p>
+<footer>
+	<section class="center-width">
+		<p>A game by <a href="https://trev3d.com" target="_blank">Julian Triveri ➔</a>
+		<br>with generous help from
+			<a href="https://fizzyapple12.com" target="_blank">Hazel Roeder ➔</a>
+			and Ernesto Tangassi Lucio.</p>
+
+		<div style="margin-top:3em;">
+			<img src="anaglyph.png" style="height:auto; max-height:100px; bottom:0;">
+
+			<div style="display:inline-block;">
+				<h1 style="margin:0;">anaglyph</h1>
+			</div>
+		</div>
+</section>
 </footer>
 
 </body>
