--- a/index.html
+++ b/index.html
@@ -59,9 +59,17 @@
 
 	<div class="hide-mobile" style="flex:0.4; position:relative;">
 		<div style="position:relative; width:100%; height:100%; bottom:-2em;">
-		<img id="easteregg" draggable="false" src="lasertag/images/lachlan.png" style="position:absolute; width:100%; bottom:0;">
+		<img id="easteregg" draggable="true" src="lasertag/images/lachlan.png" style="position:absolute; width:100%; bottom:0;">
 		</div>
 	</div>
+
+	<script>
+		const egg = document.getElementById('easteregg');
+		egg.addEventListener('dragstart', (e) => {
+   			alert("easter egg: hi matthew");
+			e.preventDefault();
+		});
+	</script>
 </section>
 
 <section style="padding:0;">
@@ -172,8 +180,7 @@
 
 </main>
 
-<footer>
-	<section class="center-width">
+<footer class="center-width">
 		<p>A game by <a href="https://trev3d.com" target="_blank">Julian Triveri ➔</a>
 		<br>with generous help from
 			<a href="https://fizzyapple12.com" target="_blank">Hazel Roeder ➔</a>
@@ -186,7 +193,6 @@
 				<h1 style="margin:0;">anaglyph</h1>
 			</div>
 		</div>
-</section>
 </footer>
 
 </body>
