--- a/lasertag/howtoplay.html
+++ b/lasertag/howtoplay.html
@@ -1,48 +1,53 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
+	<head>
+		<meta charset="UTF-8" />
+		<title>Anaglyph</title>
+		<link rel="stylesheet" href="/style.css" />
+		<meta
+			name="viewport"
+			content="width=device-width, height=device-height"
+		/>
+	</head>
+	<body>
+		<main>
+			<section class="center-width">
+				<h1>How to Play</h1>
 
-	<meta charset="UTF-8">
-	<title>Anaglyph</title>
-	<link rel="stylesheet" href="/style.css">
-	<meta name="viewport" content="width=device-width, height=device-height">
+				<p>
+					Lasertag is still in early development, so the experience is
+					fairly minimal for now.
+				</p>
 
-</head>
-<body>
+				<p>
+					<b>We recommend only playing on Quest 3 and 3s.</b> Quest 2
+					and Quest Pro don't support room scanning during gameplay
+					and can't properly occlude virtual objects behind real-world
+					obstacles. This gives older headset users a huge advantage
+					unless you're playing in an open space using only virtual
+					walls for cover.
+				</p>
 
-<main>
+				<p>
+					To start a game, make sure all of your headsets are on the
+					same WiFi network. Then, have one person press the 'host
+					game' button. Other nearby headsets should connect
+					automatically. School and office networks may not work.
+				</p>
 
-<section class="center-width">
+				<p>
+					Once everyone connects, you can start shooting at each
+					other! <b>Only headshots count!</b>
+				</p>
 
-	<h1>How to Play</h1>
-
-	<p>Lasertag is still in early development,
-		so the experience is fairly minimal for now.
-
-	<p><b>We recommend only playing on Quest 3 and 3s.</b>
-	Quest 2 and Quest Pro don't support room scanning during
-	gameplay and can't properly occlude virtual objects
-	behind real-world obstacles. This gives older headset users
-	a huge advantage unless you're playing in an open space using only
-	virtual walls for cover.
-
-	<p>To start a game, make sure all of your headsets are on the same WiFi network.
-	Then, have one person press the 'host game' button. Other nearby headsets
-	should connect automatically. School and office networks may not work.
-
-	<p>Once everyone connects, you can start shooting at each other!
-	<b>Only headshots count!</b>
-
-	<p>Use the Objects Menu to place team bases, capture points, and walls,
-	or to select your weapon. After placing both red and blue bases,
-	you can start a team deathmatch that lasts 3 minutes.
-	Future updates will expand the match system with more
-	game modes, customization options, and weapons.
-
-</section>
-
-</main>
-
-
-</body>
+				<p>
+					Use the Objects Menu to place team bases, capture points,
+					and walls, or to select your weapon. After placing both red
+					and blue bases, you can start a team deathmatch that lasts 3
+					minutes. Future updates will expand the match system with
+					more game modes, customization options, and weapons.
+				</p>
+			</section>
+		</main>
+	</body>
 </html>
