--- a/lasertag/troubleshooting.html
+++ b/lasertag/troubleshooting.html
@@ -1,126 +1,188 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
+	<head>
+		<meta charset="UTF-8" />
+		<title>Anaglyph</title>
+		<link rel="stylesheet" href="/style.css" />
+		<meta
+			name="viewport"
+			content="width=device-width, height=device-height"
+		/>
+	</head>
+	<body>
+		<main>
+			<section class="center-width">
+				<h1>Troubleshooting</h1>
+				<p>
+					Lasertag is a work-in-progress game, so some rough edges are
+					expected. Meta Quest headsets also have a few quirks that
+					can occasionally cause problems.
 
-	<meta charset="UTF-8">
-	<title>Anaglyph</title>
-	<link rel="stylesheet" href="/style.css">
-	<meta name="viewport" content="width=device-width, height=device-height">
+					<details>
+						<summary>Dislocated heads and tracking drift</summary>
+						<p>
+							This is an issue on Meta's side and the biggest
+							issue facing the game :(
+						</p>
 
-</head>
-<body>
+						<p>
+							The Quest headsets are primarily meant for
+							single-room indoor use. Their tracking and
+							localization systems aren’t tuned for arena-scale
+							play, and their 'spatial anchors' system is prone to
+							drift. Because of this, headsets won’t stay
+							perfectly calibrated to each other over time.
+						</p>
 
-<main>
+						<p>
+							I am working on ways to solve this using both
+							QR-code-like markers and comparing environment scans
+							at different times, but it will be some time before
+							I or Meta solve this issue.
+						</p>
 
-<section class="center-width">
+						<p>
+							In the meantime, you can use the
+							<b>Recalibrate</b> option in the in-game menu to
+							correct drift during play. I also recommend sticking
+							to well-lit indoor spaces with lots of contrast and
+							detail to help reduce drift issues.
+						</p>
+					</details>
 
-	<h1>Troubleshooting</h1>
-	<p>Lasertag is a work-in-progress game, so some rough edges are expected.
-	Meta Quest headsets also have a few quirks that can occasionally cause problems.
+					<details>
+						<summary>Won't connect</summary>
+						<p>
+							<b
+								>Your headsets must be on the same WiFi
+								network.</b
+							>
+							Meta headsets have a habit of disconnecting from
+							networks when asleep or switching to other known
+							networks in the same space.
+						</p>
 
-	<details>
-		<summary>Dislocated heads and tracking drift</summary>
-		<p>This is an issue on Meta's side and the biggest issue facing the game :(</p>
+						<p>
+							<b>Some WiFi networks just aren't compatible.</b>
+							Office and school networks commonly block devices
+							from communicating with each other. If your headsets
+							aren’t connecting on the same network, try enabling
+							the <b>Relay</b> option in the in-game hosting
+							settings. This routes connections through an online
+							server instead of connecting headsets directly,
+							though it may add some latency.
+						</p>
+					</details>
 
-		<p>The Quest headsets are primarily meant for single-room indoor use.
-			Their tracking and localization systems aren’t tuned
-			for arena-scale play, and their 'spatial anchors' system is prone to drift.
-			Because of this, headsets won’t stay perfectly calibrated
-			to each other over time.</p>
+					<details>
+						<summary>Won't align</summary>
+						<p>
+							First, make sure they all have a proper internet
+							connection. While Lasertag connects over LAN,
+							alignment unfortunately relies on Meta's cloud
+							services.
+						</p>
 
-		<p>I am working on ways to solve this using both QR-code-like markers
-			and comparing environment scans at different times, but it will
-			be some time before I or Meta solve this issue.</p>
+						<p>
+							Make sure each headset gets a good look at its
+							surroundings. If only some headsets fail, show them
+							around the playspace more and try connecting again.
+						</p>
 
-		<p>In the meantime, you can use the <b>Recalibrate</b> option
-			in the in-game menu to correct drift during play.
-			I also recommend sticking to well-lit indoor spaces
-			with lots of contrast and detail
-			to help reduce drift issues.</p>
-	</details>
+						<p>
+							Meta's alignment system isn't the most robust.
+							Sometimes you just need to reboot troublesome
+							headsets. Meta service outages can also prevent
+							alignment from working.
+						</p>
+					</details>
 
-	<details>
-		<summary>Won't connect</summary>
-		<p><b>Your headsets must be on the same WiFi network.</b>
-		Meta headsets have a habit of disconnecting from networks when asleep
-		or switching to other known networks in the same space.
+					<details>
+						<summary>'Moved too far!' popup error</summary>
+						<p>
+							Meta headsets restrict movement, even in mixed
+							reality, to a certain radius from the 'origin'
+							(which is where you either launched the app or last
+							re-centered). This radius is ~20 meters.
+						</p>
 
-		<p><b>Some WiFi networks just aren't compatible.</b>
-		Office and school networks commonly block devices
-		from communicating with each other.
-		If your headsets aren’t connecting on the same network,
-		try enabling the <b>Relay</b> option in the in-game hosting settings.
-		This routes connections through an online server
-		instead of connecting headsets directly,
-		though it may add some latency.
-	</details>
+						<p>
+							You can prevent this pop-up by disabling 'physical
+							space features' in the settings app.
+							<b>Beware these resulting quirks!</b>
+						</p>
 
-	<details>
-		<summary>Won't align</summary>
-		<p>First, make sure they all have a proper internet connection.
-		While Lasertag connects over LAN, alignment unfortunately
-		relies on Meta's cloud services.
+						<ul>
+							<li>
+								The system boundary isdangerously disabled in
+								all VR apps!
+							</li>
+							<li>
+								Passthrough is disabled in the system home menu.
+							</li>
+							<li>
+								Screen recordings won't capture passthrough.
+								You'll just see a black void.
+							</li>
+						</ul>
+						<p>
+							Once you are done playing Lasertag, or if you wish
+							to capture video, make sure to turn this back on!
 
-		<p>Make sure each headset gets a good look at its surroundings.
-		If only some headsets fail, show them around
-		the playspace more and try connecting again.
+							<img src="guardian disable.jpg" />
+						</p>
+					</details>
 
-		<p>Meta's alignment system isn't the most robust.
-		Sometimes you just need to reboot troublesome headsets.
-		Meta service outages can also prevent alignment from working.
-	</details>
+					<details>
+						<summary>Black video recordings</summary>
+						<p>
+							See above. Make sure 'physical space features' are
+							enabled when recording video.
+						</p>
+					</details>
 
-	<details>
-		<summary>'Moved too far!' popup error</summary>
-		<p>Meta headsets restrict movement, even in mixed reality, to a certain
-		radius from the 'origin' (which is where you either launched the app
-		or last re-centered). This radius is ~20 meters.
+					<details>
+						<summary>
+							Shooting or seeing people through walls
+						</summary>
+						<p>
+							If you're playing on Quest 3 or 3S, make sure you
+							give the app 'spatial data' permission. You may have
+							to grant it in system settings. Sometimes headsets
+							can't accurately understand your environment due to
+							reflective surfaces, light glare, etc.
+						</p>
 
-		<p>You can prevent this pop-up by disabling 'physical space features' in the settings app.
-		<b>Beware these resulting quirks!</b>
-		<ul>
-			<li>The system boundary isdangerously disabled in all VR apps!
-			<li>Passthrough is disabled in the system home menu.
-			<li>Screen recordings won't capture passthrough. You'll just see a black void.
-		</ul>
-		<p>Once you are done playing Lasertag, or if you wish to capture video,
-		make sure to turn this back on!
+						<p>
+							If you're playing on Quest 2 or Pro, these headsets
+							unfortunately lack features necessary to understand
+							and respond to your environment.
+						</p>
+					</details>
 
-		<img src="guardian disable.jpg">
-	</details>
-
-	<details>
-		<summary>Black video recordings</summary>
-		<p>See above. Make sure 'physical space features' are enabled
-		when recording video.
-	</details>
-
-	<details>
-		<summary>Shooting or seeing people through walls</summary>
-		<p>If you're playing on Quest 3 or 3S, make sure you
-		give the app 'spatial data' permission. You may have to grant it
-		in system settings. Sometimes headsets can't accurately
-		understand your environment due to reflective surfaces,
-		light glare, etc.
-
-		<p>If you're playing on Quest 2 or Pro, these headsets unfortunately
-		lack features necessary to understand and respond to your environment.
-	</details>
-
-	<details>
-		<summary>'Multiple Devices Can't Access This App at the Same Time' popup error</summary>
-		<p>Enabling App Sharing on <i>any</i> single headset
-			causes this popup on all other headsets linked to the same account.</p>
-		<p>You can disable App Sharing even if you don't have access physical to the headset
-			here:
-			<a href="https://auth.meta.com/settings/my/devices/" target="_blank">
-				https://auth.meta.com/settings/my/devices/ ➔
-			</a></p>
-	</details>
-</section>
-
-</main>
-
-
-</body>
+					<details>
+						<summary>
+							'Multiple Devices Can't Access This App at the Same
+							Time' popup error
+						</summary>
+						<p>
+							Enabling App Sharing on <i>any</i> single headset
+							causes this popup on all other headsets linked to
+							the same account.
+						</p>
+						<p>
+							You can disable App Sharing even if you don't have
+							access physical to the headset here:
+							<a
+								href="https://auth.meta.com/settings/my/devices/"
+								target="_blank"
+							>
+								https://auth.meta.com/settings/my/devices/ ➔
+							</a>
+						</p>
+					</details>
+				</p>
+			</section>
+		</main>
+	</body>
 </html>
